# kebihelp

./: .gitignore  CHANGELOG.md  README.md  default.nix  flake.nix  kbhelp.py  kebihelp.py  pyproject.toml  requirements.txt
libs/: Cli.py  Config.py  Group.py  Groups.py  Gui.py  Manage.py  Parser.py  Parsers.py  QuickRefParser.py  Shortcut.py  Tabs.py  Templates.py
parsers/: Brave_Default.py  Chrome_Default.py  Firefox_Default.py  Gmail_Default.py  KDE_Dolphin.py  Kde_Custom_Shortcuts.py  Kde_Global_Shortcuts.py  Kitty_Default.py  Vivaldi_Default.py
src/kebihelp/: config.py  gui.py  main.py  parsers.py
